--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Lit Starter Kit</title>
+    <title>Ing Hubs Employee Dashboard</title>
   </head>
   <body>
-    <a href="/dev/index.html">Component Demo</a>
+    <app-root></app-root>
+
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
