feat: create button component

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Ing Hubs Employee Dashboard</title>
+    <!-- <link rel="stylesheet" href="./src/styles/theme.css" /> -->
   </head>
   <body>
     <app-root></app-root>
