feat: create va-table component

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Ing Hubs Employee Dashboard</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- <link rel="stylesheet" href="./src/styles/theme.css" /> -->
   </head>
   <body>
